server/compilers/goLiteJS/src/test/ml1/valid/top3.go
// top level declaration permutations
package main

type num int

func f(){}

var x int
