server/compilers/goLiteJS/src/test/ml1/invalid/array4.go
//missing right bracket in index access
package main
var x [3]int

func main() {
x[3 = 1
}
